Terminando proyecto pág web en github

--- a/index.html
+++ b/index.html
@@ -54,3 +54,28 @@
                 <h3>VSCode</h3>
                 <p>Programar.</p>
             </div>
+            
+            <div class="box">
+                <i class="fa fa-window-close" aria-hidden="true"></i>
+                <h3>Win</h3>
+                <p>Dormir</p>
+            </div>
+
+        </div>
+
+   </section>
+
+   <section class="content price">
+
+        <article class="contain">
+
+            <h2 class="title">Visión</h2>
+            <p>Cómo me veo de aquí en 10 años:
+                <p>Me veo un experto en programación 
+                    un desarrollador exitoso y feliz 
+                    con una familia, y bien económicamente y lo más importante, haciendo lo que más me gusta.</p> 
+            </p>
+            <a href="index.html" class="btn">PROGRAMADOR!</a>
+
+        </article>
+    </section>    
