Fin de esqueleto html

--- a/index.html
+++ b/index.html
@@ -79,3 +79,34 @@
 
         </article>
     </section>    
+    
+   <section class="content contact">
+
+    <div class="footer-section">
+
+        <article class="contain">
+        <h2 class="title">Contacto</h2>
+        <p> 923004952
+        </p>
+
+        <a href="https:wa.me/51923004952?text=Hola,%20necesito%20información." class="btn">Contactame.</a>
+
+    </article>
+
+        <div class="f-enlaces">
+            <a href="index.html">Inicio</a>
+            <a href="https:wa.me/51923004952?text=Hola,%20necesito%20información.">Contacto</a>
+            <a href="#">Pasatiempos</a>
+            <a href="#">Visión</a>
+        </div>
+
+        <figure class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1665695970931!6m8!1m7!1sXaWdUzCOS4UsZlM9UQXQ5w!2m2!1d-11.88811584813025!2d-77.04374992575114!3f195.41360528579298!4f-10.200652957749398!5f0.7820865974627469" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </figure>
+
+    </div>
+
+</section>
+
+</body>
+</html>
