Agregando curriculum vitae que hize al inicio de clase html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            Mi nombre es Alexander Caviedes Romero, aprendiendo el maravilloso mundo
            de desarroladores web y en proceso de aprendizaje...
        </p>
-       <a href="#" class="btn">Saber mas</a>
+       <a href="sobre nosotros/index1.html" class="btn">Saber mas</a>
    </header>
 
 
