Agregando donde me gustaría estudiar

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     un desarrollador exitoso y feliz 
                     con una familia, y bien económicamente y lo más importante, haciendo lo que más me gusta.</p> 
             </p>
-            <a href="index.html" class="btn">PROGRAMADOR!</a>
+            <a href="https://www.soyhenry.com/" class="btn">PROGRAMADOR!</a>
 
         </article>
     </section>    
