Corrigiendo errores y fin de proyecto

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <div class="f-enlaces">
             <a href="index.html">Inicio</a>
             <a href="https:wa.me/51923004952?text=Hola,%20necesito%20información.">Contacto</a>
-            <a href="#">Pasatiempos</a>
-            <a href="#">Visión</a>
+            <a href="index.html">Pasatiempos</a>
+            <a href="https://www.soyhenry.com/">Visión</a>
         </div>
 
         <figure class="map">
