Terminando CV y Proyecto

--- a/sobre nosotros/index1.html
+++ b/sobre nosotros/index1.html
@@ -10,7 +10,7 @@
 <br>
 <body>
     <dl>
-        <h1>  ㅤㅤㅤAlexander Caviedes </h1>
+        <h1><center>Alexander Caviedes</center></h1>
         <p> ㅤ- Urb. Las Garas Mz. C Lt.35</p>
         <p> ㅤ- Teléfono: +51 923 004 952</p>
         <fieldset>
@@ -44,6 +44,8 @@
                 <li> Call of Dutty: Warzone </li>
             </ul>
         </fieldset>
+        <br>
+        <img src="../img/descarga.png" class="img" alt="2x2" width="380" height="100">
     </dl>
 </body>
 </html>
