--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Examen de Habilidades</title>
+    <script> alert("Bienvenidos a mi humilde página web")</script>
 </head>
 <body>
 
