--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <nav class="navbar">
             <a href="index.html">Inicio</a>
+            <a href="index.html">Epic</a>
             <a href="https:wa.me/51923004952?text=Hola,%20necesito%20información.">Contacto</a>
             <a href="https://steamcommunity.com/profiles/76561199230285394/">Steam</a>
         </nav>
